--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -44,7 +44,7 @@
 
 
 
-        <div class="flex flex-row items-center gap-4 mt-4">
+        <div class="flex flex-row items-center gap-2 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" target="_blank" rel="noopener noreferrer">
             <img src="{% static 'img/icon-apple.png' %}" alt="iOS Testflight" style="height: 32px; width: auto;">
         </a>
@@ -55,7 +55,7 @@
 
 
 
-<div class="flex flex-row items-center gap-4 mt-5">
+<div class="flex flex-row items-center gap-2 mt-5">
        <a href="https://play.google.com/store/apps/details?id=com.onlyworlds.onlyworlds" target="_blank"
        rel="noopener noreferrer">
         <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
@@ -63,21 +63,13 @@
         <p class="custom-font ml-2">Android (mobile link)</p>
     </div>
 
-    <div class="flex flex-row items-center gap-4  mt-5">
+    <div class="flex flex-row items-center gap-2  mt-5">
        <a href="https://play.google.com/apps/testing/com.onlyworlds.onlyworlds" target="_blank"
        rel="noopener noreferrer">
         <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
     </a>
-        <p class="custom-font ml-2">Android (desktop link for remote install)</p>
+        <p class="custom-font ml-2">Android (desktop link for remote mobile install)</p>
     </div>
-  <div class="flex flex-row items-center gap-4 mt-5">
-       <a href="https://drive.google.com/file/d/1-hfXXDDdAM0XqpBRG8wJAnKEPNNKuHGl/view?usp=sharing" target="_blank"
-       rel="noopener noreferrer">
-        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
-    </a>
-        <p class="custom-font ml-2">Android (APK for manual install)</p>
-    </div>
-
 
  {% comment %}   <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Explorer</h3>
 
