--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -50,15 +50,13 @@
   <p class="custom-font">Installation:</p>
         <ul class="custom-font accordion-content accordion-list-item">
             <li>iOs app is in TestFlight, a staging environment that you can install from the app
-            store first</li>
+            store first by following the link</li>
 
-            <li>Android Google Play: in closed testing. If you have no access through the two links, send a google email and the message
-            'android' on the <a href="https://www.onlyworlds.com/about/"
-                                class="inline-block text-m font-bold text-blue-500 hover:underline"
-                                target="_blank" rel="noopener noreferrer">About
-                page</a>, and you will be manually added within 24hrs</li>
-                       <li>Android manual install: Download the APK file to your phone, open through file
-            explorer, install</li>
+            <li>Android Google Play is in closed testing. Gain access by joining <b><a
+            href="https://groups.google.com/g/ow-alpha-test"
+            class="text-blue-500 hover:underline">this Google Group</a></b>, and then open the link from mobile</li>
+    <li>Android manual install: Download the APK file, transfer to your phone (e.g. to Downloads folder), open through a file
+            viewer, tap the APK file to install</li>
         </ul>
 <br>
         <p class="custom-font">Known bugs and limitations:</p>
@@ -67,6 +65,7 @@
             <li>Time settings are limited, and no such settings exist for weight, height, other units</li>
             <li>Golden fields do not properly split linked elements</li>
             <li>Elements with duplicate names cause issues when being linked</li>
+            <li>This being my first Flutter project and mobile app</li>
         </ul>
     </div>
 </div>
