--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -48,11 +48,10 @@
     <p class="custom-font mb-0">Any kind of world, transferable, game-compatible.. is all this actually possible? </p>
     <ul class="custom-font accordion-content accordion-list-item">
         <li>Yes. I built a proof of concept with Worldsmith's simulation, and have increased the scope since then.
-            Maintaining 'maximum' flexibility & intuitiveness while identifying essential data 'hooks' for code is a
-            momentous and
-            long-term quest, and there is no perfect solution to work towards. It's a process of identifying key needs
-            and optimal compromises to both these need, repeated many times over. The current definition of the
-            framework is, considering the full scope of the project, still in a very early stage, but does already
+            Maintaining 'maximum' flexibility & intuitiveness while identifying essential data 'hooks' for code is an ambitious and
+            long-term quest, without a clear optimal end state. More of a process of identifying key needs
+            and compromises to both these needs, repeated many times over. The current definition of the
+            framework is, considering the full scope of this challenge, still in a very early stage, but does already
             support some essential game- and simulation integration.
         </li>
     </ul>
