--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -49,13 +49,19 @@
         </a>
   <p class="custom-font">Installation:</p>
         <ul class="custom-font accordion-content accordion-list-item">
-            <li>iOs app is in TestFlight, a staging environment that you can install from the app
+            <li><b><a
+            href="https://testflight.apple.com/join/bXvUExCL"
+            class="text-blue-500 hover:underline">iOs app</a></b> is in TestFlight, a staging environment that you can install from the app
             store first by following the link</li>
 
-            <li>Android Google Play is in closed testing. Gain access by joining <b><a
+            <li><b><a
+            href="https://play.google.com/apps/testing/com.onlyworlds.onlyworlds"
+            class="text-blue-500 hover:underline">Android Google Play</a></b> is in closed testing. Gain access by joining <b><a
             href="https://groups.google.com/g/ow-alpha-test"
             class="text-blue-500 hover:underline">this Google Group</a></b>, and then open the link from mobile</li>
-    <li>Android manual install: Download the APK file, transfer to your phone (e.g. to Downloads folder), open through a file
+    <li>Android manual install: Download the <b><a
+            href="https://drive.google.com/file/d/1-hfXXDDdAM0XqpBRG8wJAnKEPNNKuHGl/view?usp=sharing"
+            class="text-blue-500 hover:underline">APK file</a></b>, transfer to your phone (e.g. to Downloads folder), open through a file
             viewer, tap the APK file to install</li>
         </ul>
 <br>
