--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -21,9 +21,9 @@
     <p class="custom-font mt-2 mb-2">Read more about <b><a href="#" id="link-to-framework"
                                                               class="text-blue-500 hover:underline">OnlyWorlds</a></b></p>
 
-    <p class="custom-font mb-2">Try the current <b><a
+    <p class="custom-font mb-2">Try the mobile app first, see <b><a
             href="#" id="link-to-apps"
-            class="text-blue-500 hover:underline">applications</a></b>, starting with mobile below
+            class="text-blue-500 hover:underline">applications</a></b> for support and more tools
     </p>
 
 {% comment %}      <p class="mb-2">Or in the <b> <a href="https://discord.gg/twCjqvVBwb"
@@ -55,12 +55,10 @@
 
 
 
-
-
     <div class="flex flex-row items-center gap-2  mt-5">
        <a href="https://play.google.com/apps/testing/com.onlyworlds.onlyworlds" target="_blank"
        rel="noopener noreferrer">
-        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
+        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: 30px;">
     </a>
         <p class="custom-font ml-2">Android (Google Play Closed Testing: join <b><a
             href="https://groups.google.com/g/ow-alpha-test"
@@ -69,7 +67,7 @@
 <div class="flex flex-row items-center gap-2 mt-5">
        <a href="https://drive.google.com/file/d/1-hfXXDDdAM0XqpBRG8wJAnKEPNNKuHGl/view?usp=sharing" target="_blank"
        rel="noopener noreferrer">
-        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: auto;">
+        <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: 30px;">
     </a>
         <p class="custom-font ml-2">Android (APK file for manual install)</p>
     </div>
