--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -21,7 +21,7 @@
     <p class="custom-font mt-2 mb-2">Read more about <b><a href="#" id="link-to-framework"
                                                               class="text-blue-500 hover:underline">OnlyWorlds</a></b></p>
 
-    <p class="custom-font mb-2">Try the mobile app first, see <b><a
+    <p class="custom-font mb-2">Try the mobile app below, and see <b><a
             href="#" id="link-to-apps"
             class="text-blue-500 hover:underline">applications</a></b> for support and more tools
     </p>
@@ -29,14 +29,16 @@
 {% comment %}      <p class="mb-2">Or in the <b> <a href="https://discord.gg/twCjqvVBwb"
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">Discord Server</a></b></p>{% endcomment %}
-
     <div class="flex flex-row items-center gap-2 mt-2">
-          <p class="custom-font mb-3">Provide feedback through <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
-           class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">this form</a></b> or</p>
+          <p class="custom-font mb-1"> Join the Discord server</p>
             <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
-        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-2 w-5">
-    </a>
+        <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-1 w-5">
+    </a>    </div>
+
+    <div class="flex flex-row items-center gap-2 mt-1">
+          <p class="custom-font mb-3">Or give feedback through <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+           class="inline-block font-bold text-blue-500 hover:underline" target="_blank"
+           rel="noopener noreferrer">this form</a></b>
 
     </div>
     </div>
