--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -20,6 +20,8 @@
 
     <p class="custom-font mt-2 mb-2">Read more about <b><a href="#" id="link-to-framework"
                                                               class="text-blue-500 hover:underline">OnlyWorlds</a></b></p>
+    <p class="custom-font mt-2 mb-2">Watch <b><a href="https://www.loom.com/share/529ad9d35ec542f490d0da0db4f2fb70?sid=674f6d3b-a0ce-4264-9af6-a82e65ab0688"
+                                                              class="text-blue-500 hover:underline">this video</a></b> where my partner introduces the framework</p>
 
     <p class="custom-font mb-2">Try the mobile app below, and see <b><a
             href="#" id="link-to-apps"
@@ -36,7 +38,7 @@
     </a>    </div>
 
     <div class="flex flex-row items-center gap-2 mt-1">
-          <p class="custom-font mb-3">Or give feedback through <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+          <p class="custom-font mb-3">Provide feedback in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
            class="inline-block font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">this form</a></b>
 
