--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -70,8 +70,7 @@
             <li>Number fields only hold positive integer values at this time</li>
             <li>Time settings are limited, and no such settings exist for weight, height, other units</li>
             <li>Golden fields do not properly split linked elements</li>
-            <li>Elements with duplicate names cause issues when being linked</li>
-            <li>This being my first Flutter project and mobile app</li>
+            <li>Elements with identical names can be difficult to link to</li>
         </ul>
     </div>
 </div>
@@ -89,18 +88,18 @@
     </button>
     <div id="accordion-collapsee-body-13" class="hidden no-background" aria-labelledby="accordion-collapsee-heading-13">
 
-        <p class="custom-font mt-0 mb-1">View and edit elements through a <b><a href="{% url 'explorer' %}"
+        <p class="custom-font mt-0 mb-1">Lets you view and (soon) edit elements through a <b><a href="{% url 'explorer' %}"
                                                                                 class="inline-block text-m font-bold text-blue-500 hover:underline"
                                                                                 target="_blank"
-                                                                                rel="noopener noreferrer">Web
+                                                                                rel="noopener noreferrer">web
             Interface</a></b>.
         </p>
-        <p class="custom-font mb-1">Or use this <b> <a href="TODO"
+        <p class="custom-font mb-1"><b> <a href="https://drive.google.com/file/d/1xdFjh9Jbo5KaEIS7Ev86x8FhVSp4i6zQ/view?usp=sharing"
                                                        class="inline-block text-m font-bold text-blue-500 hover:underline"
                                                        target="_blank"
-                                                       rel="noopener noreferrer">Desktop executable</a> </b> (windows).
+                                                       rel="noopener noreferrer">Desktop executable</a></b> version (windows).
 
-        <p class="custom-font mb-1">Build and export your world in the mobile app, then import in Explorer.</p>
+        <p class="custom-font mb-1">Build a world in the mobile app first, export it, then import it in Explorer with the world key.</p>
 
 
     </div>
