--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -18,30 +18,36 @@
 
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">What's Next</h3>{% endcomment %}
 
-    <p class="custom-font mt-2 mb-2">Read more about <b><a href="#" id="link-to-framework"
-                                                              class="text-blue-500 hover:underline">OnlyWorlds</a></b></p>
-    <p class="custom-font mt-2 mb-2">Watch <b><a href="https://www.loom.com/share/529ad9d35ec542f490d0da0db4f2fb70?sid=674f6d3b-a0ce-4264-9af6-a82e65ab0688"
-                                                              class="text-blue-500 hover:underline">this video</a></b> where my partner introduces the framework</p>
+    <p class="custom-font mt-2 mb-2"><b><a href="#" id="link-to-framework"
+                                                              class="text-blue-500 hover:underline">OnlyWorlds</a></b>
+    is now in closed testing, with an open source release planned for later this year.
+        <br>    </p>
 
+    <p class="custom-font mb-2">Watch <b><a href="https://www.loom.com/share/529ad9d35ec542f490d0da0db4f2fb70?sid=674f6d3b-a0ce-4264-9af6-a82e65ab0688"
+                                                              class="text-blue-500 hover:underline">this video</a></b> for a short introduction.</p>
     <p class="custom-font mb-2">Try the mobile app below, and see <b><a
             href="#" id="link-to-apps"
-            class="text-blue-500 hover:underline">applications</a></b> for support and more tools
+            class="text-blue-500 hover:underline">Applications</a></b> for more information.
     </p>
+    The three tools currently available serve to introduce the framework, and to get feedback on how current definitions should be altered
+    to best suit your world building.
+
+
+
 
 {% comment %}      <p class="mb-2">Or in the <b> <a href="https://discord.gg/twCjqvVBwb"
            class="inline-block text-m font-bold text-blue-500 hover:underline" target="_blank"
            rel="noopener noreferrer">Discord Server</a></b></p>{% endcomment %}
     <div class="flex flex-row items-center gap-2 mt-2">
-          <p class="custom-font mb-1"> Join the Discord server</p>
+          <p class="custom-font mb-1"> Join the Discord server:</p>
             <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
         <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="mb-1 w-5">
     </a>    </div>
 
     <div class="flex flex-row items-center gap-2 mt-1">
-          <p class="custom-font mb-3">Provide feedback in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+          <p class="custom-font mb-3">Provide feedback <a href="mailto:onlyworldsdev@gmail.com">directly to me</a>, in Discord, or comprehensively in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
            class="inline-block font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">this form</a></b>
-
+                                                                                                                                                             rel="noopener noreferrer">this form</a></b></p>
     </div>
     </div>
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Companion App</h3>{% endcomment %}
