--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -14,23 +14,27 @@
         <li>Brought to life in games and simulations</li>
 
     </ul>
-<p class="custom-font mt-3 mb-1">You are invited to try the platform and help shape it!</p>
 
+<p class="custom-font mt-3">You are invited to try the platform and help shape it going forward!</p>
+<br>
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">What's Next</h3>{% endcomment %}
 
-    <p class="custom-font mt-2 mb-2"><b><a href="#" id="link-to-framework"
+    <p class="custom-font mb-2"><b><a href="#" id="link-to-framework"
                                                               class="text-blue-500 hover:underline">OnlyWorlds</a></b>
     is now in closed testing, with an open source release planned for later this year.
-        <br>    </p>
+        <br>
 
+    </p>
+    The three <b><a
+            href="#" id="link-to-apps"
+            class="text-blue-500 hover:underline">Applications</a></b> currently available serve to introduce the framework,
+    and to get feedback on how current classifications and definitions work for your worlds.
+    <br>
+    <br>
     <p class="custom-font mb-2">Watch <b><a href="https://www.loom.com/share/529ad9d35ec542f490d0da0db4f2fb70?sid=674f6d3b-a0ce-4264-9af6-a82e65ab0688"
                                                               class="text-blue-500 hover:underline">this video</a></b> for a short introduction.</p>
-    <p class="custom-font mb-2">Try the mobile app below, and see <b><a
-            href="#" id="link-to-apps"
-            class="text-blue-500 hover:underline">Applications</a></b> for more information.
-    </p>
-    The three tools currently available serve to introduce the framework, and to get feedback on how current definitions should be altered
-    to best suit your world building.
+
+
 
 
 
@@ -45,10 +49,11 @@
     </a>    </div>
 
     <div class="flex flex-row items-center gap-2 mt-1">
-          <p class="custom-font mb-3">Provide feedback <a href="mailto:onlyworldsdev@gmail.com">directly to me</a>, in Discord, or comprehensively in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+          <p class="custom-font mb-2">Provide feedback <a href="mailto:onlyworldsdev@gmail.com">directly to me</a>, in Discord, or comprehensively in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
            class="inline-block font-bold text-blue-500 hover:underline" target="_blank"
                                                                                                                                                              rel="noopener noreferrer">this form</a></b></p>
     </div>
+      <p class="custom-font">Start with the mobile app:</p>
     </div>
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Companion App</h3>{% endcomment %}
 
@@ -79,7 +84,7 @@
        rel="noopener noreferrer">
         <img src="{% static 'img/icon-google.png' %}" alt="Android APK" style="height: 32px; width: 30px;">
     </a>
-        <p class="custom-font ml-2">Android (APK file for manual install)</p>
+        <p class="custom-font ml-2">Android (APK for manual install)</p>
     </div>
  {% comment %}   <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Explorer</h3>
 
