--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -178,55 +178,29 @@
         </ul>
     </div>
 </div>{% endcomment %}
-
-<div class="custom-font mb-4" id="accordion-collapse5" data-accordion="collapse">
+{% comment %}<div class="custom-font mb-4" id="accordion-collapse7" data-accordion="collapse">
     <button type="button"
             class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
-            data-accordion-target="#accordion-collapse-body-5" aria-expanded="false"
-            aria-controls="accordion-collapse-body-5">
-        Changelog
+            data-accordion-target="#accordion-collapse-body-7" aria-expanded="false"
+            aria-controls="accordion-collapse-body-7">
+        For Creatives
         <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
         </svg>
     </button>
 
-    <div id="accordion-collapse-body-5" class="hidden no-background" aria-labelledby="accordion-collapse-heading-5">
+    <div id="accordion-collapse-body-7" class="hidden no-background" aria-labelledby="accordion-collapse-heading-7">
 
-                   <p class="custom-font mb-2">17-05-2024 </p>
-        <ul class="custom-font accordion-content accordion-list-item">
-            <li>Added a For Developers section, below</li>
-            <li>Continued work on Explorer field editing, new build ETA 22-05</li>
-            <li>Worked on Companion app user feedback changes, new version ETA 21-05</li>
-        </ul>
-        <br>
+        <p class="custom-font">
+        will not ask you money, but can not guarantee your world will fit the long term format, or that the tools are professional or bugfree
+            want your feedback to enable you to build any world, but not be bound to a single tool or environment
+        </p>
 
-            <p class="custom-font mb-2">28-04-2024 Version 0.16.00</p>
-        <ul class="custom-font accordion-content accordion-list-item">
-            <li>iOs / android release fixes</li>
-            <li>progression complete</li>
-            <li>AI work remains: parser mode, query creation</li>
-        </ul>
-        <br>
-
-        <p class="custom-font mb-2">18-04-2024 Version 0.15.10</p>
-        <ul class="custom-font accordion-content accordion-list-item">
-            <li>iOs / android stable</li>
-            <li>progression complete</li>
-            <li>AI work remains: parser mode, query creation</li>
-        </ul>
-        <br>
-        <p class="custom-font mb-2">05-04-2024 Version 0.14.x</p>
-        <ul class="custom-font accordion-content accordion-list-item">
-            <li>iOs / android setup</li>
-            <li>essential bugfixes</li>
-            <li>fixing and finishing progression</li>
-        </ul>
     </div>
-</div>
+</div>{% endcomment %}
 
-
-<div class="custom-font mb-4" id="accordion-collapse6" data-accordion="collapse">
+<div class="custom-font mb-4" id="accordion-collapse7" data-accordion="collapse">
     <button type="button"
             class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
             data-accordion-target="#accordion-collapse-body-6" aria-expanded="false"
@@ -273,9 +247,63 @@
         If you have any thoughts or perspectives on what you would want/need in infrastructure, or functionality,
         or data structure, or anything else, I would be very happy to hear it.
 
-
     </div>
 </div>
+
+<div class="custom-font mb-4" id="accordion-collapse5" data-accordion="collapse">
+    <button type="button"
+            class="text-blue-500 text-2xl font-bold rounded-lg px-1 py-3 text-left inline-flex items-center w-full justify-between"
+            data-accordion-target="#accordion-collapse-body-5" aria-expanded="false"
+            aria-controls="accordion-collapse-body-5">
+        Changelog
+        <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+             xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+        </svg>
+    </button>
+
+    <div id="accordion-collapse-body-5" class="hidden no-background" aria-labelledby="accordion-collapse-heading-5">
+
+
+                      <p class="custom-font mb-2">18-05-2024 </p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>Uploaded new Explorer build that has full basic functionality</li>
+        </ul>
+        <br>
+
+                   <p class="custom-font mb-2">17-05-2024 </p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>Added a For Developers section, below</li>
+            <li>Continued work on Explorer field editing</li>
+            <li>Worked on Companion app user feedback changes, new version ETA late May</li>
+        </ul>
+        <br>
+
+            <p class="custom-font mb-2">28-04-2024 Version 0.16.00</p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>iOs / android release fixes</li>
+            <li>progression complete</li>
+            <li>AI work remains: parser mode, query creation</li>
+        </ul>
+        <br>
+
+        <p class="custom-font mb-2">18-04-2024 Version 0.15.10</p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>iOs / android stable</li>
+            <li>progression complete</li>
+            <li>AI work remains: parser mode, query creation</li>
+        </ul>
+        <br>
+        <p class="custom-font mb-2">05-04-2024 Version 0.14.x</p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>iOs / android setup</li>
+            <li>essential bugfixes</li>
+            <li>fixing and finishing progression</li>
+        </ul>
+    </div>
+</div>
+
+
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
