--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -100,11 +100,14 @@
         </p>
         <br>
 
-            <a href="{% static 'img/explorer.png' %}" target="_blank" style="width: 80px;" class="inline-block mb-3">
-            <img src="{% static 'img/explorer.png' %}" alt="Explorer Preview" style="width: 650px"
+            <a href="{% static 'img/Expl1.png' %}" target="_blank" style="width: 80px;" class="inline-block mb-3">
+            <img src="{% static 'img/Expl1.png' %}" alt="Explorer Preview 1" style="width: 650px"
                  class="cursor-pointer">
         </a>
-
+     <a href="{% static 'img/Expl2.png' %}" target="_blank" style="width: 80px;" class="inline-block mb-3">
+            <img src="{% static 'img/Expl2.png' %}" alt="Explorer Preview 2" style="width: 650px"
+                 class="cursor-pointer">
+        </a>
         <br>
  <b><a href="{% url 'explorer' %}"
                                                                                 class="inline-block text-m font-bold text-blue-500 hover:underline"
