--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -263,11 +263,22 @@
     </button>
 
     <div id="accordion-collapse-body-5" class="hidden no-background" aria-labelledby="accordion-collapse-heading-5">
-
+                      <p class="custom-font mb-2">08-07-2024 </p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>Started Obsidian plugin development: folder and template setup works, more to do the next few weeks</li>
+            <li>Started (public) website landing page redesign</li>
+        </ul>
+        <br>
+                           <p class="custom-font mb-2">16-06-2024 </p>
+        <ul class="custom-font accordion-content accordion-list-item">
+            <li>Finished core functionality of the Explorer tool</li>
+            <li>Includes element creation & editing, world creation, world import & export</li>
+        </ul>
+        <br>
 
                       <p class="custom-font mb-2">18-05-2024 </p>
         <ul class="custom-font accordion-content accordion-list-item">
-            <li>Uploaded new Explorer build that has full basic functionality</li>
+            <li>Uploaded new Explorer build that has basic functionality</li>
         </ul>
         <br>
 
