--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -214,38 +214,15 @@
 
     <div id="accordion-collapse-body-6" class="hidden no-background" aria-labelledby="accordion-collapse-heading-6">
 
-             <p class="custom-font">OnlyWorlds intends to provide the definitions and infrastructure for a common file structure that any
+             <p class="custom-font">OnlyWorlds provides definitions and infrastructure for a common file structure that any
             developer is welcome to integrate or otherwise support in their tooling, for any commercial model.
                  <br>
                  <br>
-            An open source repository is in the process of being set up, and will be launched together with the framework changes
-                 that result from feedback in this closed round.
+            An open source repository is being set up <a href="https://github.com/OnlyWorlds/OnlyWorlds" class="text-blue-500 hover:underline">here</a>, 
+            and it auto-translates the core structure, defined in YAML under 'schema', into whatever languages and formats developers might find useful. 
                  <br>
-            ETA is late summer 2024. I can give no guarantees on exact data structures, but JSON is likely to remain a primary transfer format.
-                 <br>
-                 <br>
-                 The current JSON structure includes</p>
-                     <ul class="custom-font accordion-content accordion-list-item">
-            <li>A header for each category, followed by a list of elements of that category</li>
-            <li>A 'World' header, followed by world metadata</li>
-            <li>'Progression' and 'Rewards' headers, only relevant to the mobile app at this time</li>
-        </ul>
-         <br>
+                 <br>       <br>
 
-        For development reference please see  <b> <a href="https://drive.google.com/file/d/1Z7yG3hsp2_Fd0_YCMVWY_CEV6HCR823_/view?usp=sharing"
-           class="inline-block font-bold text-blue-500 hover:underline" target="_blank"
-           rel="noopener noreferrer">this world file</a></b>, which additionally has a 'WorldTyping' table that has static
-        data: short descriptors for each Category and, more importantly, the groups-and-fields for each Category.
-        <br>
-        <br>
-        This file does not have all necessary information. Meta properties of the fields (is it a single-link, multi-link, max-number, ..)
-        I have currently defined in the apps themselves, and this will also be formalized and accessible in the open source release.
-        <br>
-        <br>
-        I hope that what I do present at this time is enough to theorize or experiment how it might work for you as a developer.
-        <br>
-        If you have any thoughts or perspectives on what you would want/need in infrastructure, or functionality,
-        or data structure, or anything else, I would be very happy to hear it.
 
     </div>
 </div>
