--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -21,14 +21,14 @@
 
     <p class="custom-font mb-2"><b><a href="#" id="link-to-framework"
                                                               class="text-blue-500 hover:underline">OnlyWorlds</a></b>
-    is now in closed testing, with an open source release planned for later this year.
+    is now in closed testing, with an open release planned for December 2024.
         <br>
 
     </p>
     The three <b><a
             href="#" id="link-to-apps"
-            class="text-blue-500 hover:underline">Applications</a></b> currently available serve to introduce the framework,
-    and to get feedback on how current classifications and definitions work for your worlds.
+            class="text-blue-500 hover:underline">Applications</a></b> currently available serve as prototypes introduce the framework,
+    and to get feedback on how current classifications and definitions work for you.
     <br>
     <br>
     <p class="custom-font mb-2">Watch <b><a href="https://www.loom.com/share/529ad9d35ec542f490d0da0db4f2fb70?sid=674f6d3b-a0ce-4264-9af6-a82e65ab0688"
@@ -49,11 +49,10 @@
     </a>    </div>
 
     <div class="flex flex-row items-center gap-2 mt-1">
-          <p class="custom-font mb-2">Provide feedback <a href="mailto:onlyworldsdev@gmail.com">directly to me</a>, in Discord, or comprehensively in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
-           class="inline-block font-bold text-blue-500 hover:underline" target="_blank"
-                                                                                                                                                             rel="noopener noreferrer">this form</a></b></p>
+          <p class="custom-font mb-2">Provide feedback on <a href="https://github.com/OnlyWorlds/OnlyWorlds/discussions" class="text-blue-500 hover:underline">this GitHub discussions page</a>, <a href="mailto:onlyworldsdev@gmail.com" class="text-blue-500 hover:underline">or by email</a>, or in Discord, or in <b> <a href="https://forms.gle/W618BZguPaRDyj6S7"
+           class="inline-block font-bold text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">this form</a></b></p>
     </div>
-      <p class="custom-font">Start with the mobile app:</p>
+      <p class="custom-font">Start by enabling the <b>OnlyWorlds Builder</b> community plugin in Obsidian, or by installing the mobile app:</p>
     </div>
 {% comment %}    <h3 class="custom-font text-custom-xl md:text-2xl lg:text-3xl">Companion App</h3>{% endcomment %}
 
